using 4 spaces instead of 2 in requirements classes & reworked some syntax